# silicium-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md
.cargo/: config.toml
crates/silicium-internal/: Cargo.toml
crates/silicium-internal/src/: lib.rs  prelude.rs
crates/silicium-sync/: Cargo.toml
crates/silicium-sync/src/: lib.rs  spin.rs
crates/silicium-x86_64/: Cargo.toml
crates/silicium-x86_64/src/: address.rs  cpu.rs  gdt.rs  idt.rs  interrupts.rs  io.rs  lib.rs  mod.rs  segment.rs  tss.rs
crates/silicium-x86_64/src/cpu/: mod.rs
iso/boot/: limine.cfg
scripts/: build_iso.sh  build_limine.sh  run.sh  run_debug.sh  run_tests.sh  runner.sh
src/: config.rs  glue.rs  log.rs  main.rs
src/arch/: acpi.rs  address.rs  exception.rs  gdt.rs  idt.rs  irq.rs  mod.rs  paging.rs  smp.rs  tss.rs
src/mm/: allocator.rs  frame.rs  mod.rs  vmm.rs
src/mm/frame/: dummy_allocator.rs  mod.rs  state.rs
src/sys/: mod.rs  process.rs  thread.rs
src/sys/schedule/: mod.rs  round_robin.rs
