[package]
name = "silicium"
version = "0.1.0"
edition = "2021"

[dependencies]
x86_64 = { path = "crates/silicium-x86_64", package = "silicium-x86_64", features = ["int_handler"] }
sync = { path = "crates/silicium-sync", package = "silicium-sync" }

linked_list_allocator = "0.10.4"
bitfield = "0.14.0"
bitflags = "1.3.2"
limine = "0.1.10"
acpi = "4.1.1"
log = "0.4.17"

[[bin]]
name = "silicium"
test = true
bench = false