[package]
name = "silicium"
version = "0.1.0"
edition = "2021"
license = "MIT / Apache-2.0"

[features]
default = ["log"]
log = []

[dependencies.x86_64] 
path = "crates/silicium-x86_64"
package = "silicium-x86_64"
features = ["int_handler"]

[dependencies]
linked_list_allocator = "0.10.4"
hashbrown = "0.13.2"
bitfield = "0.14.0"
bitflags = "1.3.2"
limine = "0.1.10"
spin = "0.9.6"
acpi = "4.1.1"
log = "0.4.17"

[[bin]]
name = "silicium"
test = true
bench = false

[profile.release]
codegen-units = 1
opt-level = 3
debug = false
lto = true
